--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
     ports:
       - "3001:3001"
     restart: always
+    env_file:
+      - .env
     environment:
       - PORT=3001
-      # Adicionar variáveis de ambiente aqui ou via arquivo .env na VPS
 
   frontend:
     build: .
@@ -17,5 +18,7 @@ services:
     ports:
       - "80:80"
     restart: always
+    env_file:
+      - .env
     depends_on:
       - backend
